# wbdata

./: README.md  docker-compose.yaml  pyproject.toml
api/: Dockerfile  data_loader.py  main.py  schemas.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: indicatorChart.jsx
notebooks/: data_exploration.ipynb  predicted_wb_data.json  wb_data.csv  wb_data.json
